Fin fourth part

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <div class="scene">
-      <div class="grass">
+      <div class="grass" id="topDebug">
 
       </div>
 
@@ -34,7 +34,7 @@
     </div>
 
   <div class="debugArea">
-    <textarea id="debugTextarea" class="debugTextareaClass" rows="8" cols="80"></textarea>
+    <!-- <textarea id="debugTextarea" class="debugTextareaClass" rows="8" cols="80"></textarea> -->
 
     <input type="text" id="stepsDone" value="0" style="width:50px" />
 
